--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^3.0",
         "carlos-meneses/laravel-mpdf": "^2.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "maatwebsite/excel": "^1.1",
         "mcamara/laravel-localization": "^2.0",
         "php-flasher/flasher-laravel": "^1.15",
+        "pusher/pusher-php-server": "^7.2",
         "sebastian/diff": "^5.1"
     },
     "require-dev": {
